--- a/package.json
+++ b/package.json
@@ -2,18 +2,10 @@
   "name": "MathJax",
   "version": "0.1.0",
   "description": "Minimal node package wrapper for MathJax",
-  "repository": "https://github.com/Galadirith/MathJax/tree/mathjax-complete-node",
-  "files": [
-    "config",
-    "extensions",
-    "fonts",
-    "jax",
-    "localization",
-    "unpacked",
-    "LICENSE",
-    "MathJax.js",
-    "README.md"
-  ],
+  "repository": {
+        "type": "git",
+        "url": "git://github.com/Galadirith/MathJax-node.git#mathjax-complete-node"
+  },
   "dependencies": {
   }
 }
